--- a/css/style.css
+++ b/css/style.css
@@ -345,14 +345,14 @@ a:focus {
   background-color: #f89646;
 }
 
-.furniture_section .box {
+.team_section .box {
   margin-top: 45px;
   background-color: #faf7f7;
   padding: 25px;
   border-radius: 5px;
 }
 
-.furniture_section .box .img-box {
+.team_section .box .img-box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -366,21 +366,21 @@ a:focus {
   padding: 25px;
 }
 
-.furniture_section .box .img-box img {
+.team_section .box .img-box img {
   max-width: 100%;
   max-height: 100%;
 }
 
-.furniture_section .box .detail-box {
+.team_section .box .detail-box {
   margin-top: 15px;
 }
 
-.furniture_section .box .detail-box h5 {
+.team_section .box .detail-box h5 {
   text-transform: uppercase;
   font-size: 18px;
 }
 
-.furniture_section .box .detail-box .price_box {
+.team_section .box .detail-box .price_box {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -389,15 +389,15 @@ a:focus {
   justify-content: space-between;
 }
 
-.furniture_section .box .detail-box .price_box .price_heading {
+.team_section .box .detail-box .price_box .price_heading {
   margin-bottom: 0;
 }
 
-.furniture_section .box .detail-box .price_box .price_heading span {
+.team_section .box .detail-box .price_box .price_heading span {
   color: #6bb7be;
 }
 
-.furniture_section .box .detail-box .price_box a {
+.team_section .box .detail-box .price_box a {
   color: #6bb7be;
   text-transform: uppercase;
   font-size: 15px;
