--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,8 @@
-@media (max-width: 1300px) {}
+@media (max-width: 1300px) {
+}
 
-@media (max-width: 1120px) {}
+@media (max-width: 1120px) {
+}
 
 @media (max-width: 992px) {
   .long_section {
@@ -17,24 +19,16 @@
     margin-top: 10px;
   }
 
-  .slider_section {
-    padding-bottom: 90px;
-  }
-
   .quote_btn-container {
     flex-direction: column;
     align-items: center;
   }
-
-
 }
 
 @media (max-width: 768px) {
-
-
   .slider_section {
     padding-top: 45px;
-    padding-bottom: 75px;
+    padding-bottom: 45px;
   }
 
   .slider_section .detail_box {
@@ -44,6 +38,7 @@
 
   .slider_section .img-box {
     margin-top: 45px;
+    padding: 0px !important;
   }
 
   .about_section .img-box {
@@ -79,7 +74,7 @@
     margin-bottom: 15px;
   }
 
-  .info_section .row>div {
+  .info_section .row > div {
     text-align: center;
   }
 
@@ -99,7 +94,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
   }
 
   .info_form .social_box {
@@ -109,7 +103,6 @@
   .info_form .social_box a {
     margin: 0 5px;
   }
-
 }
 
 @media (max-width: 576px) {
@@ -118,14 +111,13 @@
     margin-right: 25px;
   }
 
-
   .info_section .info_links .info_links_menu {
     margin-bottom: 35px;
   }
-
 }
 
-@media (max-width: 480px) {}
+@media (max-width: 480px) {
+}
 
 @media (max-width: 420px) {
   .long_section {
