update layout; adjust alignment in carousel and modify column sizes for better responsiveness

--- a/css/style.css
+++ b/css/style.css
@@ -524,7 +524,7 @@ a:focus {
   flex-direction: column;
   -webkit-box-align: start;
   -ms-flex-align: start;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .client_section .box .detail-box .name {
