--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 
 :root {
   --main-color: #ff6f00;
-  --second-color: #333333;
+  --second-color: #333333; /*text*/
   --other-color: #1e88e5;
 }
 
@@ -347,7 +347,7 @@ a:focus {
 .team_section .box {
   /* margin-top: 45px; */
   background-color: transparent;
-  padding: 25px;
+  padding: 20px;
   border-radius: 5px;
 }
 
